--- a/Rentra/rentra/pubspec.yaml
+++ b/Rentra/rentra/pubspec.yaml
@@ -34,10 +34,11 @@ dependencies:
   image_picker: ^0.8.4
 
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  shared_preferences: ^2.2.2
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
