--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -26,5 +26,6 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r Rentra/rentra_backend/requirements.txt
     - name: Run Tests
+      working-directory: ./Rentra/rentra_backend
       run: |
-        python Rentra/rentra_backend/manage.py test
+        python manage.py test
