[IMP] Small changes

--- a/Rentra/rentra/pubspec.yaml
+++ b/Rentra/rentra/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   http: ^0.13.3
   image_picker: ^0.8.4
+  flutter_settings_screens: ^0.3.3-null-safety+2
 
 
   # The following adds the Cupertino Icons font to your application.
